# aoc2024

./: CMakeLists.txt  solve1.py  solve2.py
include/: 06.h  helpers.h
src/: 06.cpp  solve10.py  solve11.py  solve12.py  solve13.py  solve14.py  solve15.py  solve16.py  solve17.py  solve18.py  solve19.py  solve20.py  solve3.py  solve4.py  solve5.py  solve6.py  solve7.py  solve8.py  solve9.py
